--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -33,11 +33,11 @@ governing permissions and limitations under the License.
 .Cyan-600-Theme-1-5-rgba { color: rgba(18, 176, 218, 1); }
 
 /* Color Theme Swatches in HSLA */
-.Cyan-600-Theme-1-1-hsla { color: hsla(195, 95, 36, 1); }
-.Cyan-600-Theme-1-2-hsla { color: hsla(193, 24, 36, 1); }
-.Cyan-600-Theme-1-3-hsla { color: hsla(198, 51, 69, 1); }
-.Cyan-600-Theme-1-4-hsla { color: hsla(195, 10, 22, 1); }
-.Cyan-600-Theme-1-5-hsla { color: hsla(192, 84, 46, 1); }
+.Cyan-600-Theme-1-1-hsla { color: hsla(195, 95%, 36%, 1); }
+.Cyan-600-Theme-1-2-hsla { color: hsla(193, 24%, 36%, 1); }
+.Cyan-600-Theme-1-3-hsla { color: hsla(198, 51%, 69%, 1); }
+.Cyan-600-Theme-1-4-hsla { color: hsla(195, 10%, 22%, 1); }
+.Cyan-600-Theme-1-5-hsla { color: hsla(192, 84%, 46%, 1); }
 
 
 /* Color Theme Swatches in Hex */
@@ -54,9 +54,9 @@ governing permissions and limitations under the License.
 
 
 /* Color Theme Swatches in HSLA */
-.Theme2-1-hsla { color: hsla(90, 72, 55, 1); }
-.Theme2-2-hsla { color: hsla(13, 72, 55, 1); }
-.Theme2-3-hsla { color: hsla(228, 72, 55, 1); }
+.Theme2-1-hsla { color: hsla(90, 72%, 55%, 1); }
+.Theme2-2-hsla { color: hsla(13, 72%, 55%, 1); }
+.Theme2-3-hsla { color: hsla(228, 72%, 55%, 1); }
 
 
 :root {
