--- a/src/pages/generals/test.astro
+++ b/src/pages/generals/test.astro
@@ -31,3 +31,4 @@ const desiredPairs: AllPairsProps = {
 ---
 <AllConflicts></AllConflicts>
 <AllGenerals></AllGenerals>
+<AllPairs {...desiredPairs}></AllPairs>
