--- a/src/components/general/AllPairs.astro
+++ b/src/components/general/AllPairs.astro
@@ -12,9 +12,9 @@ import {
 } from '@schemas/generalsSchema';
 
 import { type ConflictDatumType } from '@schemas/conflictSchemas';
-import  {
-    type ExtendedGeneralType,
-    type GeneralPairType
+import {
+  type ExtendedGeneralType,
+  type GeneralPairType,
 } from '@schemas/ExtendedGeneral';
 
 const DEBUG = false;
