part way through migrating

--- a/src/components/general/AllGenerals.astro
+++ b/src/components/general/AllGenerals.astro
@@ -33,9 +33,7 @@ interface Props {
   TargetClass?: generalSpecialistsType;
   }
 
-let { TargetClass } = Astro.props;
-
-TargetClass = generalSpecialists.enum.Archers;
+const { TargetClass } = Astro.props;
 
 const generalObjects: CollectionEntry<'generals'>[] =
   await getCollection('generals');
