--- a/src/components/general/AllGenerals.astro
+++ b/src/components/general/AllGenerals.astro
@@ -27,7 +27,7 @@ import { BookType } from '../../schemas/bookSchemas';
 
 import {EvAnsScoreComputer} from '@components/general/buffComputers/EvAnsRanking/EvAnsScoreComputer';
 
-const DEBUG = true;
+const DEBUG = false;
 
 interface Props {
   TargetClass?: generalSpecialistsType;
