the linter is *really* unhappy with me

--- a/src/components/general/AllPairs.astro
+++ b/src/components/general/AllPairs.astro
@@ -33,7 +33,7 @@ if (Astro.locals.CachedGenerals.length > 0) {
     await delay(15);
   }
   const generalBaseN = new BaseN(Astro.locals.CachedGenerals, 2);
-  [...generalBaseN].forEach((pPair: Array<ExtendedGeneralType>) => {
+  [...generalBaseN].forEach((pPair: ExtendedGeneralType[]) => {
     const primary = pPair[0];
     const secondary = pPair[1];
     if (primary === undefined || secondary === undefined) {
