--- a/src/pages/generals/pair-picking/[Specialist].astro
+++ b/src/pages/generals/pair-picking/[Specialist].astro
@@ -1,5 +1,5 @@
 ---
-export const prerender = true;
+export const prerender = false;
 
 import StarlightPage from '@astrojs/starlight/components/StarlightPage.astro';
 import { Debug } from 'astro:components';
@@ -15,11 +15,11 @@ import type { ComponentProps } from 'astro/types';
 import AllGenerals from '@components/general/AllGenerals.astro';
 import AllConflicts from '@components/general/AllConflicts.astro';
 
-import type { generalSpecialistsType } from '../../../schemas/generalsSchema';
+import { generalSpecialists, generalSpecialistsType } from '../../../schemas/generalsSchema';
 
 const DEBUG = true;
 
-export const getStaticPaths = (async () => {
+/*export const getStaticPaths = (async () => {
   const pairEntries = await getCollection('docs', ({id}) => {
     return id.includes('pair-picking');
   });
@@ -41,7 +41,42 @@ export const getStaticPaths = (async () => {
 type Params = InferGetStaticParamsType<typeof getStaticPaths>;
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
-const {entry} = Astro.props;
+const {entry} = Astro.props;*/
+
+const { Specialist } = Astro.params;
+let entry: CollectionEntry<'docs'> | undefined;
+if(Specialist !== null && Specialist !== undefined) {
+  entry = await getEntry('docs', `generals/pair-picking/${Specialist}`);
+}
+
+if(entry === undefined || entry === null) {
+  if(DEBUG) {
+    console.log(`Specialist ${Specialist} not found`)
+    throw new Error('Specialist is required');
+  } else {
+    return Astro.redirect('/404');
+  }
+}
+
+let TargetClass: generalSpecialistsType;
+if(!Specialist.toLocaleLowerCase().localeCompare(generalSpecialists.enum.Archers.toLocaleLowerCase())) {
+  TargetClass = generalSpecialists.enum.Archers;
+} else if (! Specialist.toLocaleLowerCase().localeCompare(generalSpecialists.enum.Ground.toLocaleLowerCase())) {
+  TargetClass = generalSpecialists.enum.Ground;
+} else if (!Specialist.toLocaleLowerCase().localeCompare(generalSpecialists.enum.Siege.toLocaleLowerCase())) {
+  TargetClass = generalSpecialists.enum.Siege;
+} else if (!Specialist.toLocaleLowerCase().localeCompare(generalSpecialists.enum.Wall.toLocaleLowerCase())) {
+  TargetClass = generalSpecialists.enum.Wall;
+} else if (!Specialist.toLocaleLowerCase().localeCompare(generalSpecialists.enum.Mayor.toLocaleLowerCase())) {
+  TargetClass = generalSpecialists.enum.Mayor;
+} else {
+  if(DEBUG) {
+    console.log(`Specialist ${Specialist} not valid`)
+    throw new Error('Specialist is required');
+  } else {
+    return Astro.redirect('/404');
+  }
+}
 
 const { Content } = await entry.render();
 ---
@@ -54,7 +89,7 @@ const { Content } = await entry.render();
   }}
 >
   {DEBUG && `Dynamic Template`}
-  <AllGenerals TargetClass={entry.slug} />
+  <AllGenerals TargetClass={TargetClass} />
   <AllConflicts />
   <Content />
 </StarlightPage>
