I have two tables doing two different things on the same page.  The reinforcement table is still all wrong, with only partial columns, and wrong conditions, but it is theregit add src/components/general/BaseGeneral.ts

--- a/src/components/general/pairing/AttackPairs.astro
+++ b/src/components/general/pairing/AttackPairs.astro
@@ -31,17 +31,24 @@ import {
   type GeneralPairType,
 } from '@schemas/ExtendedGeneral';
 
-const DEBUG = false;
+const DEBUG = true;
 
 interface Props {
   generalClass: generalSpecialistsType;
   useCase?: generalUseCaseType
 }
 
-const { generalClass } = Astro.props;
-let { useCase } = Astro.props;
+let { generalClass, useCase }: Props = Astro.props;
+
 if(useCase === null || useCase === undefined) {
+  if(DEBUG) {
+    console.log(`warning, use case was null`)
+  }
   useCase = generalUseCase.enum.Attack;
+} else {
+  if (DEBUG) {
+    console.log(`use case was ${useCase}`)
+  }
 }
 
 const table_name = `${Astro.url.pathname}-${ulid()}`;
