--- a/src/components/general/pairing/AttackPairs.astro
+++ b/src/components/general/pairing/AttackPairs.astro
@@ -19,6 +19,8 @@ import {
   type generalSpecialistsType,
   type generalUseCaseType, generalUseCase,
 } from '../../../schemas/generalsSchema';
+import AllGenerals from '../AllGenerals.astro';
+import AllConflicts from '../AllConflicts.astro';
 
 const DEBUG = true;
 
