--- a/src/components/general/AllGenerals.astro
+++ b/src/components/general/AllGenerals.astro
@@ -21,11 +21,12 @@ import { SpecialityType } from '../../schemas/specialitySchema';
 import { BookType } from '../../schemas/bookSchemas';
 
 import {EvAnsScoreComputer} from '@components/general/buffComputers/EvAnsRanking/EvAnsScoreComputer';
+import { generalUseCaseType } from '../../schemas/generalsSchema';
 
 const DEBUG = false;
 
 interface Props {
-  TargetClass?: generalSpecialistsType;
+  TargetClass?: generalUseCaseType;
   }
 
 let { TargetClass } = Astro.props;
