--- a/src/pages/generals/pair-picking/[Specialist].astro
+++ b/src/pages/generals/pair-picking/[Specialist].astro
@@ -14,7 +14,7 @@ import type { ComponentProps } from 'astro/types';
 import AllGenerals from '@components/general/AllGenerals.astro';
 import AllConflicts from '@components/general/AllConflicts.astro';
 
-import { generalSpecialists, type generalSpecialistsType } from '../../../schemas/generalsSchema';
+import { generalSpecialists, generalUseCase, type generalUseCaseType } from '../../../schemas/generalsSchema';
 
 const DEBUG = true;
 
@@ -57,21 +57,21 @@ if(entry === undefined || entry === null) {
   }
 }
 
-let TargetClass: generalSpecialistsType;
+let TargetClass: generalUseCaseType;
 if(!Specialist.toLocaleLowerCase().localeCompare(generalSpecialists.enum.Archers.toLocaleLowerCase())) {
-  TargetClass = generalSpecialists.enum.Archers;
+  TargetClass = generalUseCase.enum.Archers;
 } else if (!Specialist.toLocaleLowerCase().localeCompare(generalSpecialists.enum.Mounted.toLocaleLowerCase())) {
-  TargetClass = generalSpecialists.enum.Mounted;
+  TargetClass = generalUseCase.enum.Mounted;
 } else if (!Specialist.toLocaleLowerCase().localeCompare(generalSpecialists.enum.Monsters.toLocaleLowerCase())) {
-  TargetClass = generalSpecialists.enum.Mounted;
+  TargetClass = generalUseCase.enum.Mounted;
 } else if (! Specialist.toLocaleLowerCase().localeCompare(generalSpecialists.enum.Ground.toLocaleLowerCase())) {
-  TargetClass = generalSpecialists.enum.Ground;
+  TargetClass = generalUseCase.enum.Ground;
 } else if (!Specialist.toLocaleLowerCase().localeCompare(generalSpecialists.enum.Siege.toLocaleLowerCase())) {
-  TargetClass = generalSpecialists.enum.Siege;
+  TargetClass = generalUseCase.enum.Siege;
 } else if (!Specialist.toLocaleLowerCase().localeCompare(generalSpecialists.enum.Wall.toLocaleLowerCase())) {
-  TargetClass = generalSpecialists.enum.Wall;
+  TargetClass = generalUseCase.enum.Wall;
 } else if (!Specialist.toLocaleLowerCase().localeCompare(generalSpecialists.enum.Mayor.toLocaleLowerCase())) {
-  TargetClass = generalSpecialists.enum.Mayor;
+  TargetClass = generalUseCase.enum.Mayor;
 } else {
   if(DEBUG) {
     console.log(`Specialist ${Specialist} not valid`)
